--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@chakra-ui/icons": "^2.1.1",
 		"@chakra-ui/react": "^2.8.2",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.0",
@@ -19,6 +20,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@react-oauth/google": "^0.12.1",
+		"@uiw/react-md-editor": "^4.0.4",
 		"axios": "^1.6.7",
 		"dayjs": "^1.11.10",
 		"framer-motion": "^11.0.8",
@@ -30,7 +32,9 @@
 		"react-dom": "^18.2.0",
 		"react-i18next": "^14.0.5",
 		"react-router-dom": "^6.22.2",
+		"recharts": "^2.12.2",
 		"recoil": "^0.7.7",
+		"rich-textarea": "^0.24.4",
 		"sass": "^1.71.1",
 		"sort-by": "^1.2.0",
 		"swr": "^2.2.5"
